==> quanmao/ebox_l_framework/FrameWork/stm32f1/eBox/ebox_i2c.cpp <==
#include "stm32f1xx_ll_rcc.h"
#include "stm32f1xx_ll_i2c.h"
#include "ebox_gpio.h"
#include "ebox_base.h"
#include "mcu_define.h"
#include "ebox_i2c.h"
#define debug 0
#define  I2C_DEBUG(...) DBG("[I2C]  "),DBG(__VA_ARGS__)
#define  I2C_DEBUG(...)

void E_I2C::config(Speed_t speed)
{
    Clock_t clock;
    eboxGetClockInfo(&clock);
    _speed = speed;
    _timing = TIMING[speed];
    LL_I2C_Disable(_i2cx);
    LL_I2C_ConfigSpeed(I2C1, clock.pclk1, _timing, LL_I2C_DUTYCYCLE_2);
    LL_I2C_Enable(_i2cx);
}

uint8_t E_I2C::write_buf(uint16_t slaveAddr, uint8_t *data, uint16_t nWrite)
{
    uint8_t err = EOK;
    err = _start();
    err = _send7bitsAddress(slaveAddr, WRITE);
    while(nWrite){
        err = _sendByte(*data++);
    }    
    LL_I2C_GenerateStopCondition(I2C1);
    return err;
}

uint8_t E_I2C::check_busy(uint16_t slaveAddr)
{
    uint8_t tmp = 0;
    uint32_t end = ENDTIME(timeout);
    do
    {
        _start();
        tmp = _send7bitsAddress(slaveAddr, WRITE);
        LL_I2C_ClearFlag_STOP(_i2cx);
        LL_I2C_GenerateStopCondition(I2C1);
        if (TIMEOUT(end, timeout))
        {
            return EWAIT;
        }
    } while (tmp == EWAIT);
    return EOK;
}

uint8_t E_I2C::write_buf(uint16_t slaveAddr, uint16_t regAddr, uint8_t *data, uint16_t nWrite)
{
    uint32_t end = ENDTIME(timeout);

    // 发送地址寄存器
    LL_I2C_HandleTransfer(_i2cx, slaveAddr, LL_I2C_ADDRESSING_MODE_7BIT, 1, LL_I2C_MODE_RELOAD, LL_I2C_GENERATE_START_WRITE);

    while (!LL_I2C_IsActiveFlag_TCR(_i2cx))
    {
        if (LL_I2C_IsActiveFlag_TXIS(_i2cx))
        {
            LL_I2C_TransmitData8(_i2cx, regAddr);
        }
        if (TIMEOUT(end, timeout)) return EWAIT;

    }
    // 发送数据
    if (nWrite > 255)
    {
        // num_to_writ>255: RELOAD,NBYTE=0xFF,NOSTART
        while (nWrite > 255)
        {
            // 发送地址寄存器
            LL_I2C_HandleTransfer(_i2cx, slaveAddr, LL_I2C_ADDRESSING_MODE_7BIT, 0xFF, LL_I2C_MODE_RELOAD, LL_I2C_GENERATE_NOSTARTSTOP);
            end = ENDTIME(timeout);

            while (!LL_I2C_IsActiveFlag_TCR(_i2cx))
            {
                if (LL_I2C_IsActiveFlag_TXIS(_i2cx))
                {
                    LL_I2C_TransmitData8(_i2cx, *data++);
                }
                if (TIMEOUT(end, timeout)) return EWAIT;
            }
            nWrite = nWrite - 255;
        }
        // num_to_writ<=255: AUTOEND,NBYTE=num_to_writ,NOSTART
        LL_I2C_HandleTransfer(_i2cx, slaveAddr, LL_I2C_ADDRESSING_MODE_7BIT, nWrite, LL_I2C_MODE_AUTOEND, LL_I2C_GENERATE_NOSTARTSTOP);
        end = ENDTIME(timeout);

        while (!LL_I2C_IsActiveFlag_STOP(_i2cx))
        {
            if (LL_I2C_IsActiveFlag_TXIS(_i2cx))
            {
                LL_I2C_TransmitData8(_i2cx, *data++);
            }
            if (TIMEOUT(end, timeout)) return EWAIT;

        }
        LL_I2C_ClearFlag_STOP(_i2cx);
    }
    else
    {
        // 写入地址寄存器和数据
        LL_I2C_HandleTransfer(_i2cx, slaveAddr, LL_I2C_ADDRESSING_MODE_7BIT, nWrite, LL_I2C_MODE_AUTOEND, LL_I2C_GENERATE_NOSTARTSTOP);
        
        end = ENDTIME(timeout);
        while (!LL_I2C_IsActiveFlag_STOP(_i2cx))
        {
            if (LL_I2C_IsActiveFlag_TXIS(_i2cx))
            {
                LL_I2C_TransmitData8(_i2cx, *data++);
            }
            if (TIMEOUT(end, timeout)) return EWAIT;
        }
        LL_I2C_ClearFlag_STOP(_i2cx);
    }
    return EOK;
}
