==> quanmao/ebox_l_framework/FrameWork/at32f421/eBox/ebox_i2c.cpp <==
#include "stm32f0xx_ll_rcc.h"
#include "stm32f0xx_ll_i2c.h"
#include "ebox_gpio.h"
#include "ebox_base.h"
#include "mcu_define.h"
#include "ebox_i2c.h"
#define debug 0
#define  I2C_DEBUG(...) DBG("[I2C]  "),DBG(__VA_ARGS__)
#define  I2C_DEBUG(...)
#define	C16M10K	 	__LL_I2C_CONVERT_TIMINGS(0x3, 0xc7, 0xc3, 0x02, 0x04)		//10k@16M
#define	C16M100K	__LL_I2C_CONVERT_TIMINGS(0x3, 0x13, 0xf, 0x02, 0x04)		//100k@16M
#define	C16M400K	__LL_I2C_CONVERT_TIMINGS(0x1, 0x9, 0x3, 0x2, 0x3)			//400k@16M
#define	C48M10K	 	0xA010B2FF		//10k@48M,stand mode
#define	C48M100K	0x10805E89		//100k@48M,stand mode
#define C48M200K    0x00905E82      //200K@48M,Fast mode
#define	C48M400K	0x00901850   	//400k@48M,Fast mode
#define	C8M10K	 	0x101098F3		//10k@8M,stand mode
#define	C8M100K	 	0x00201D2B		//100k@8M,stand mode

void E_I2C::config(Speed_t speed)
{
    Clock_t clock;
    eboxGetClockInfo(&clock);
    _speed = speed;
    if (clock.pclk1 == 48000000)
    {
        _timing = TIMING[speed];
    }
    else
    { // 非48M主频，一律按8M主频处理
        _timing = (speed == K10) ? (C8M10K) : (C8M100K);
    }

    eboxRccCmd(RccTableI2C, (uint32_t)_i2cx, ENABLE);
    // I2C1 需要选择特定的时钟
    (_i2cx == I2C1) ? (LL_RCC_SetI2CClockSource(LL_RCC_I2C1_CLKSOURCE_SYSCLK)) : (void());

    LL_I2C_Disable(_i2cx);
    LL_I2C_SetTiming(_i2cx, _timing);
    LL_I2C_Enable(_i2cx);
}

uint8_t E_I2C::write_buf(uint16_t slaveAddr, uint8_t *data, uint16_t nWrite)
{
#if (USE_TIMEOUT != 0)
    uint32_t end = ENDTIME(tOut);
#endif

#if MAXWRITE
    if (nWrite > 255)
    {
        // num_to_writ>255: RELOAD,NBYTE=0xFF,START
        LL_I2C_HandleTransfer(_i2cx, slaveAddr, LL_I2C_ADDRESSING_MODE_7BIT, 0xFF, LL_I2C_MODE_RELOAD, LL_I2C_GENERATE_START_WRITE);

        while (!LL_I2C_IsActiveFlag_TCR(_i2cx))
        {
            if (LL_I2C_IsActiveFlag_TXIS(_i2cx))
            {
                LL_I2C_TransmitData8(_i2cx, *data++);
            }
#if (USE_TIMEOUT != 0)
            if (TIMEOUT(end, tOut))
                return EWAIT;
#endif
        }
        nWrite = nWrite - 255;
        // num_to_writ>255: RELOAD,NBYTE=0xFF,NOSTART

        while (nWrite > 255)
        {
            // 发送地址寄存器
            LL_I2C_HandleTransfer(_i2cx, slaveAddr, LL_I2C_ADDRESSING_MODE_7BIT, 0xFF, LL_I2C_MODE_RELOAD, LL_I2C_GENERATE_NOSTARTSTOP);
#if (USE_TIMEOUT != 0)
            end = ENDTIME(tOut);
#endif
            while (!LL_I2C_IsActiveFlag_TCR(_i2cx))
            {
                if (LL_I2C_IsActiveFlag_TXIS(_i2cx))
                {
                    LL_I2C_TransmitData8(_i2cx, *data++);
                }
#if (USE_TIMEOUT != 0)
                if (TIMEOUT(end, tOut))
                    return EWAIT;
#endif
            }
            nWrite = nWrite - 255;
        }
        // num_to_writ<=255: AUTOEND,NBYTE=num_to_writ,NOSTART
        LL_I2C_HandleTransfer(_i2cx, slaveAddr, LL_I2C_ADDRESSING_MODE_7BIT, nWrite, LL_I2C_MODE_AUTOEND, LL_I2C_GENERATE_NOSTARTSTOP);
#if (USE_TIMEOUT != 0)
        end = ENDTIME(tOut);
#endif
        while (!LL_I2C_IsActiveFlag_STOP(_i2cx))
        {
            if (LL_I2C_IsActiveFlag_TXIS(_i2cx))
            {
                LL_I2C_TransmitData8(_i2cx, *data++);
            }
#if (USE_TIMEOUT != 0)
            if (TIMEOUT(end, tOut))
                return EWAIT;
#endif
        }
        LL_I2C_ClearFlag_STOP(_i2cx);
    }
    else
#endif
    {
        // 写入地址寄存器和数据
        LL_I2C_HandleTransfer(_i2cx, slaveAddr, LL_I2C_ADDRESSING_MODE_7BIT, nWrite, LL_I2C_MODE_AUTOEND, LL_I2C_GENERATE_START_WRITE);
#if (USE_TIMEOUT != 0)
        end = ENDTIME(tOut);
#endif
        while (!LL_I2C_IsActiveFlag_STOP(_i2cx))
        {
            if (LL_I2C_IsActiveFlag_TXIS(_i2cx))
            {
                LL_I2C_TransmitData8(_i2cx, *data++);
            }
#if (USE_TIMEOUT != 0)
            if (TIMEOUT(end, tOut))
                return EWAIT;
#endif
        }
        LL_I2C_ClearFlag_STOP(_i2cx);
    }

    return EOK;
}

uint8_t E_I2C::check_busy(uint16_t slaveAddr)
{
    uint8_t tmp = 0;
    uint32_t end = ENDTIME(timeout);
    do
    {
        // clear STOP & NACK flag
        SET_BIT(_i2cx->ICR, LL_I2C_ICR_NACKCF | LL_I2C_ICR_STOPCF);
        LL_I2C_HandleTransfer(_i2cx, slaveAddr, LL_I2C_ADDRESSING_MODE_7BIT, 0, LL_I2C_MODE_AUTOEND, LL_I2C_GENERATE_START_WRITE);
        // 等待发出停止位，并清除
        while (!LL_I2C_IsActiveFlag_STOP(_i2cx));
        LL_I2C_ClearFlag_STOP(_i2cx);
        if (TIMEOUT(end, timeout))
        {
            I2C_DEBUG("fail,ISR reg is %d \r\n", _i2cx->ISR);
            return EWAIT;
        }
        tmp = LL_I2C_IsActiveFlag_NACK(_i2cx);
    } while (tmp == 1); //如果无响应，则继续等待
    return EOK;
}

uint8_t E_I2C::write_buf(uint16_t slaveAddr, uint16_t regAddr, uint8_t *data, uint16_t nWrite)
{
    uint32_t end = ENDTIME(timeout);

    // 发送地址寄存器
    LL_I2C_HandleTransfer(_i2cx, slaveAddr, LL_I2C_ADDRESSING_MODE_7BIT, 1, LL_I2C_MODE_RELOAD, LL_I2C_GENERATE_START_WRITE);

    while (!LL_I2C_IsActiveFlag_TCR(_i2cx))
    {
        if (LL_I2C_IsActiveFlag_TXIS(_i2cx))
        {
            LL_I2C_TransmitData8(_i2cx, regAddr);
        }
        if (TIMEOUT(end, timeout)) return EWAIT;

    }
    // 发送数据
    if (nWrite > 255)
    {
        // num_to_writ>255: RELOAD,NBYTE=0xFF,NOSTART
        while (nWrite > 255)
        {
            // 发送地址寄存器
            LL_I2C_HandleTransfer(_i2cx, slaveAddr, LL_I2C_ADDRESSING_MODE_7BIT, 0xFF, LL_I2C_MODE_RELOAD, LL_I2C_GENERATE_NOSTARTSTOP);
            end = ENDTIME(timeout);

            while (!LL_I2C_IsActiveFlag_TCR(_i2cx))
            {
                if (LL_I2C_IsActiveFlag_TXIS(_i2cx))
                {
                    LL_I2C_TransmitData8(_i2cx, *data++);
                }
                if (TIMEOUT(end, timeout)) return EWAIT;
            }
            nWrite = nWrite - 255;
        }
        // num_to_writ<=255: AUTOEND,NBYTE=num_to_writ,NOSTART
        LL_I2C_HandleTransfer(_i2cx, slaveAddr, LL_I2C_ADDRESSING_MODE_7BIT, nWrite, LL_I2C_MODE_AUTOEND, LL_I2C_GENERATE_NOSTARTSTOP);
        end = ENDTIME(timeout);

        while (!LL_I2C_IsActiveFlag_STOP(_i2cx))
        {
            if (LL_I2C_IsActiveFlag_TXIS(_i2cx))
            {
                LL_I2C_TransmitData8(_i2cx, *data++);
            }
            if (TIMEOUT(end, timeout)) return EWAIT;

        }
        LL_I2C_ClearFlag_STOP(_i2cx);
    }
    else
    {
        // 写入地址寄存器和数据
        LL_I2C_HandleTransfer(_i2cx, slaveAddr, LL_I2C_ADDRESSING_MODE_7BIT, nWrite, LL_I2C_MODE_AUTOEND, LL_I2C_GENERATE_NOSTARTSTOP);
        
        end = ENDTIME(timeout);
        while (!LL_I2C_IsActiveFlag_STOP(_i2cx))
        {
            if (LL_I2C_IsActiveFlag_TXIS(_i2cx))
            {
                LL_I2C_TransmitData8(_i2cx, *data++);
            }
            if (TIMEOUT(end, timeout)) return EWAIT;
        }
        LL_I2C_ClearFlag_STOP(_i2cx);
    }
    return EOK;
}
